--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.0",
+    "axios": "^1.9.0",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.0",
     "nanoid": "^5.0.8",
@@ -31,6 +32,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.19"
   }
 }
